using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class MonsterAnimationData 
{
    private string idleParameterName = "Idle";
    private string MoveParameterName = "Move";
    private string AttackParameterName = "Attack";

    public void Initialize()
    {

    }
}
